prusti-tests/tests/verify_overflow/ui/counterexamples/struct-2.stderr
error: [Prusti: verification error] postcondition might not hold.
  --> $DIR/struct-2.rs:13:11
   |
13 | #[ensures(!result)]
   |           ^^^^^^^
   |
note: the error originates here
  --> $DIR/struct-2.rs:14:1
   |
14 | / fn test_pure(x: X) -> bool{
15 | |     x.a == x.b
16 | | }
   | |_^
note: counterexample for "x"
       value:   X {
            a: 5,
            b: 5,
        }
  --> $DIR/struct-2.rs:14:14
   |
14 | fn test_pure(x: X) -> bool{
   |              ^
note: counterexample for "result"
       value:   true
  --> $DIR/struct-2.rs:15:5
   |
15 |     x.a == x.b
   |     ^^^^^^^^^^

error: [Prusti: verification error] postcondition might not hold.
  --> $DIR/struct-2.rs:20:35
   |
20 | fn test_mut(x: &mut X, a: i32) -> bool{
   |                                   ^^^^
   |
note: the error originates here
  --> $DIR/struct-2.rs:20:1
   |
20 | / fn test_mut(x: &mut X, a: i32) -> bool{
21 | |     x.a = a;
22 | |     x.b = 1;
23 | |     x.a = 2;
24 | |     x.a = a;
25 | |     x.a > 0
26 | | }
   | |_^
note: counterexample for "x"
       value:   ref(X {
            a: 0,
            b: 3,
        })
  --> $DIR/struct-2.rs:20:13
   |
20 | fn test_mut(x: &mut X, a: i32) -> bool{
   |             ^
note: counterexample for "x"
       value:   ref(X {
            a: -2,
            b: 3,
        })
  --> $DIR/struct-2.rs:21:5
   |
21 |     x.a = a;
   |     ^^^^^^^
note: counterexample for "x"
       value:   ref(X {
            a: -2,
            b: 1,
        })
  --> $DIR/struct-2.rs:22:5
   |
22 |     x.b = 1;
   |     ^^^^^^^
note: counterexample for "x"
       value:   ref(X {
            a: 2,
            b: 1,
        })
  --> $DIR/struct-2.rs:23:5
   |
23 |     x.a = 2;
   |     ^^^^^^^
note: counterexample for "x"
       value:   ref(X {
            a: -2,
            b: 1,
        })
  --> $DIR/struct-2.rs:24:5
   |
24 |     x.a = a;
   |     ^^^^^^^
note: counterexample for "a"
       value:   -2
  --> $DIR/struct-2.rs:20:24
   |
20 | fn test_mut(x: &mut X, a: i32) -> bool{
   |                        ^
note: counterexample for "result"
       value:   false
  --> $DIR/struct-2.rs:25:5
   |
25 |     x.a > 0
   |     ^^^^^^^

error: aborting due to 2 previous errors

